# smart-clipboard-manager

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ARCHITECTURE.md
examples/: __init__.py  usage.py
src/: __init__.py  main.py  server.py
src/clipboard/: __init__.py  monitor.py  storage.py
src/ml/: __init__.py  classifier.py  searcher.py
src/utils/: __init__.py  config.py
tests/: __init__.py  test_clipboard.py  test_integration.py  test_ml.py
